--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,26 +1,35 @@
-env:
-  node: true
-  es2021: true
-
-extends:
-  - eslint:recommended
-  - plugin:@typescript-eslint/recommended
-  - plugin:prettier/recommended
-  - plugin:import/recommended
-  - plugin:import/typescript
-
 parser: "@typescript-eslint/parser"
 
+extends:
+  - "eslint:recommended"
+  - "plugin:@typescript-eslint/recommended"
+  - "plugin:@typescript-eslint/recommended-requiring-type-checking"
+  - "plugin:prettier/recommended"
+  - "prettier"
+
 parserOptions:
-  ecmaVersion: latest
-  sourceType: module
+  ecmaVersion: 2021
+  sourceType: "module"
+  tsconfigRootDir: __dirname
+  project:
+    - "./tsconfig.json"
+
+env:
+  es6: true
+  browser: true
+  es2021: true
 
 plugins:
   - "@typescript-eslint"
-  - prettier
+  - "prettier"
 
 rules:
-  "@typescript-eslint/no-unused-vars":
-    - error
-  "import/order":
-    - error
+  "prettier/prettier": "error"
+  "@typescript-eslint/indent":
+    - "error"
+    - 2
+  "@typescript-eslint/no-unused-vars": "error"
+  "@typescript-eslint/no-explicit-any": "error"
+
+ignorePatterns:
+  - "node_modules"
