--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^20.5.0",
     "autoprefixer": "^10.4.15",
+    "cssnano": "^6.0.1",
+    "cssnano-preset-advanced": "^6.0.1",
     "eslint": "^8.46.0",
     "eslint-config-prettier": "^8.9.0",
     "eslint-import-resolver-typescript": "^3.5.5",
@@ -20,9 +23,13 @@
     "postcss": "^8.4.28",
     "prettier": "^3.0.0",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.9"
+    "vite": "^4.4.9",
+    "vite-plugin-solid": "^2.7.0"
   },
   "dependencies": {
+    "@solidjs/meta": "^0.28.6",
+    "flowbite": "^1.8.1",
+    "solid-js": "^1.7.11",
     "typescript": "^5.1.6"
   }
 }
