--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -30,6 +30,8 @@ rules:
     - 2
   "@typescript-eslint/no-unused-vars": "error"
   "@typescript-eslint/no-explicit-any": "error"
+  "react-hooks/rules-of-hooks": "error"
+  "react-hooks/exhaustive-deps": "warn"
 
 ignorePatterns:
   - "node_modules"
