--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "main": "./public/index.js",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.5.0",
+    "@types/react": "^18.2.18",
+    "@types/react-dom": "^18.2.7",
+    "@types/react-helmet": "^6.1.6",
+    "@vitejs/plugin-react": "^4.0.4",
     "autoprefixer": "^10.4.15",
     "cssnano": "^6.0.1",
     "cssnano-preset-advanced": "^6.0.1",
@@ -20,16 +24,19 @@
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.28",
     "prettier": "^3.0.0",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.9",
-    "vite-plugin-solid": "^2.7.0"
+    "vite": "^4.4.9"
   },
   "dependencies": {
-    "@solidjs/meta": "^0.28.6",
+    "classnames": "^2.3.2",
+    "firebase": "^10.2.0",
     "flowbite": "^1.8.1",
-    "solid-js": "^1.7.11",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "typescript": "^5.1.6"
   }
 }
