--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vite": "^4.4.9"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "firebase": "^10.2.0",
     "flowbite": "^1.8.1",
