--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -10,8 +10,7 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - env: VITE_APP_API_KEY={{ secrets.VITE_APP_API_KEY }}
+      - run: VITE_APP_API_KEY={{ secrets.VITE_APP_API_KEY }}
           VITE_APP_AUTH_DOMAIN={{ secrets.VITE_APP_AUTH_DOMAIN }}
           VITE_APP_PROJECT_ID={{ secrets.VITE_APP_PROJECT_ID }}
           VITE_APP_STORAGE_BUCKET={{ secrets.VITE_APP_STORAGE_BUCKET }}
@@ -19,6 +18,7 @@ jobs:
           VITE_APP_APP_ID={{ secrets.VITE_APP_APP_ID }}
           VITE_APP_MEASUREMENT_ID={{ secrets.VITE_APP_MEASUREMENT_ID }}
           VITE_APP_FUNCTIONS_URL={{ secrets.VITE_APP_FUNCTIONS_URL }}
+      - uses: actions/checkout@v3
       - run: npm ci && npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
