--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -8,8 +8,7 @@ jobs:
     if: "${{ github.event.pull_request.head.repo.full_name == github.repository }}"
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - env: VITE_APP_API_KEY={{ secrets.VITE_APP_API_KEY }}
+      - run: VITE_APP_API_KEY={{ secrets.VITE_APP_API_KEY }}
           VITE_APP_AUTH_DOMAIN={{ secrets.VITE_APP_AUTH_DOMAIN }}
           VITE_APP_PROJECT_ID={{ secrets.VITE_APP_PROJECT_ID }}
           VITE_APP_STORAGE_BUCKET={{ secrets.VITE_APP_STORAGE_BUCKET }}
@@ -17,6 +16,7 @@ jobs:
           VITE_APP_APP_ID={{ secrets.VITE_APP_APP_ID }}
           VITE_APP_MEASUREMENT_ID={{ secrets.VITE_APP_MEASUREMENT_ID }}
           VITE_APP_FUNCTIONS_URL={{ secrets.VITE_APP_FUNCTIONS_URL }}
+      - uses: actions/checkout@v3
       - run: npm ci && npm run build
       - run: npm ci && npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
