--- a/package.json
+++ b/package.json
@@ -6,11 +6,23 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.3.2",
+    "@storybook/addon-interactions": "^7.3.2",
+    "@storybook/addon-links": "^7.3.2",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/addon-styling": "^1.3.6",
+    "@storybook/blocks": "^7.3.2",
+    "@storybook/builder-vite": "^7.3.2",
+    "@storybook/react": "^7.3.2",
+    "@storybook/react-vite": "^7.3.2",
+    "@storybook/testing-library": "^0.2.0",
     "@types/node": "^20.5.0",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
@@ -25,8 +37,10 @@
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.13",
     "postcss": "^8.4.28",
     "prettier": "^3.0.0",
+    "storybook": "^7.3.2",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.9"
   },
@@ -38,6 +52,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vite-plugin-svgr": "^3.2.0"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
