--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,6 @@
   },
   "include": ["src"],
   "exclude": ["functions"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{ "path": "./tsconfig.node.json" }],
+  "types": ["vite-plugin-svgr/client"] 
 }
