--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "date-fns": "^2.30.0",
     "firebase": "^10.2.0",
     "flowbite": "^1.8.1",
     "react": "^18.2.0",
