--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -10,7 +10,7 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-      - run: VITE_APP_API_KEY=${{ secrets.VITE_APP_API_KEY }}
+      - env: VITE_APP_API_KEY=${{ secrets.VITE_APP_API_KEY }}
           VITE_APP_AUTH_DOMAIN=${{ secrets.VITE_APP_AUTH_DOMAIN }}
           VITE_APP_PROJECT_ID=${{ secrets.VITE_APP_PROJECT_ID }}
           VITE_APP_STORAGE_BUCKET=${{ secrets.VITE_APP_STORAGE_BUCKET }}
