--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -8,7 +8,7 @@ jobs:
     if: "${{ github.event.pull_request.head.repo.full_name == github.repository }}"
     runs-on: ubuntu-latest
     steps:
-      - run: VITE_APP_API_KEY=${{ secrets.VITE_APP_API_KEY }}
+      - env: VITE_APP_API_KEY=${{ secrets.VITE_APP_API_KEY }}
           VITE_APP_AUTH_DOMAIN=${{ secrets.VITE_APP_AUTH_DOMAIN }}
           VITE_APP_PROJECT_ID=${{ secrets.VITE_APP_PROJECT_ID }}
           VITE_APP_STORAGE_BUCKET=${{ secrets.VITE_APP_STORAGE_BUCKET }}
