--- a/firebase.json
+++ b/firebase.json
@@ -6,6 +6,7 @@
       "**/.*",
       "**/node_modules/**"
     ],
+    "predeploy": ["npm --prefix \"$RESOURCE_DIR\" run build"],
     "rewrites": [
       {
         "source": "**",
