--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Set Environment Variables
-        run: |
+      - run: |
           echo VITE_APP_API_KEY=${{ secrets.VITE_APP_API_KEY }} >> $GITHUB_ENV
           echo VITE_APP_AUTH_DOMAIN=${{ secrets.VITE_APP_AUTH_DOMAIN }} >> $GITHUB_ENV
           echo VITE_APP_PROJECT_ID=${{ secrets.VITE_APP_PROJECT_ID }} >> $GITHUB_ENV
