--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -11,14 +11,14 @@ jobs:
       - uses: actions/checkout@v3
       - name: Set Environment Variables
         run: |
-          echo "VITE_APP_API_KEY=${{ secrets.VITE_APP_API_KEY }}" >> $GITHUB_ENV
-          echo "VITE_APP_AUTH_DOMAIN=${{ secrets.VITE_APP_AUTH_DOMAIN }}" >> $GITHUB_ENV
-          echo "VITE_APP_PROJECT_ID=${{ secrets.VITE_APP_PROJECT_ID }}" >> $GITHUB_ENV
-          echo "VITE_APP_STORAGE_BUCKET=${{ secrets.VITE_APP_STORAGE_BUCKET }}" >> $GITHUB_ENV
-          echo "VITE_APP_MESSAGING_SENDER_ID=${{ secrets.VITE_APP_MESSAGING_SENDER_ID }}" >> $GITHUB_ENV
-          echo "VITE_APP_APP_ID=${{ secrets.VITE_APP_APP_ID }}" >> $GITHUB_ENV
-          echo "VITE_APP_MEASUREMENT_ID=${{ secrets.VITE_APP_MEASUREMENT_ID }}" >> $GITHUB_ENV
-          echo "VITE_APP_FUNCTIONS_URL=${{ secrets.VITE_APP_FUNCTIONS_URL }}" >> $GITHUB_ENV
+          echo "VITE_APP_API_KEY=${{ secrets.VITE_APP_API_KEY }}" >> .env.production
+          echo "VITE_APP_AUTH_DOMAIN=${{ secrets.VITE_APP_AUTH_DOMAIN }}" >> .env.production
+          echo "VITE_APP_PROJECT_ID=${{ secrets.VITE_APP_PROJECT_ID }}" >> .env.production
+          echo "VITE_APP_STORAGE_BUCKET=${{ secrets.VITE_APP_STORAGE_BUCKET }}" >> .env.production
+          echo "VITE_APP_MESSAGING_SENDER_ID=${{ secrets.VITE_APP_MESSAGING_SENDER_ID }}" >> .env.production
+          echo "VITE_APP_APP_ID=${{ secrets.VITE_APP_APP_ID }}" >> .env.production
+          echo "VITE_APP_MEASUREMENT_ID=${{ secrets.VITE_APP_MEASUREMENT_ID }}" >> .env.production
+          echo "VITE_APP_FUNCTIONS_URL=${{ secrets.VITE_APP_FUNCTIONS_URL }}" >> .env.production
       - run: npm ci && npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
