--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-router": "^6.15.0",
+    "react-router-dom": "^6.15.0",
     "typescript": "^5.1.6",
     "vite-plugin-svgr": "^3.2.0"
   },
