--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "vite": "^4.4.9"
   },
   "dependencies": {
+    "@chakra-ui/react-use-size": "^2.1.0",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
