--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "postcss": "^8.4.28",
     "prettier": "^3.0.0",
     "storybook": "^7.3.2",
+    "storybook-addon-react-router-v6": "^2.0.5",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.9"
   },
