--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
-  "exclude": ["functions", "**/*.stories.tsx"],
+  "exclude": ["functions"],
   "references": [{ "path": "./tsconfig.node.json" }],
   "types": ["vite-plugin-svgr/client"] 
 }
