--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "carriedbybees",
+  "name": "means-motive",
   "version": "1.0.0",
   "description": "",
   "main": "./public/index.js",
@@ -40,6 +40,7 @@
     "eslint-plugin-storybook": "^0.6.13",
     "postcss": "^8.4.28",
     "prettier": "^3.0.0",
+    "sass": "^1.69.5",
     "storybook": "^7.3.2",
     "storybook-addon-react-router-v6": "^2.0.5",
     "tailwindcss": "^3.3.3",
