made naming agnostic

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "means-motive",
+  "name": "web-template",
   "version": "1.0.0",
   "description": "",
   "main": "./public/index.js",
