--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./public/index.js",
   "scripts": {
-    "dev": "vite",
+    "dev": "next dev",
     "build": "tsc && vite build && cp -r dist functions && rm dist/index.html",
     "deploy": "npm run build && firebase deploy --only=hosting",
     "preview": "vite preview",
@@ -51,11 +51,14 @@
     "@chakra-ui/react-use-size": "^2.1.0",
     "@sentry/react": "^7.107.0",
     "@sentry/vite-plugin": "^2.15.0",
+    "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query": "^5.34.2",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
     "firebase": "^10.2.0",
+    "firebase-admin": "^12.1.0",
+    "next": "^14.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
@@ -65,6 +68,7 @@
     "react-markdown": "^8.0.7",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
+    "server-only": "^0.0.1",
     "typescript": "^5.1.6",
     "vite-plugin-ssr": "^0.4.142",
     "vite-plugin-svgr": "^3.2.0",
