--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,16 +12,22 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
 
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    /* next.js */
+    "plugins": [{"name": "next"}],
+    "esModuleInterop": true,
+    "allowJs": true,
+    "jsx": "preserve",
+    "forceConsistentCasingInFileNames": true,
+    "incremental": true
   },
-  "include": ["src"],
-  "exclude": ["functions"],
-  "references": [{ "path": "./tsconfig.node.json" }],
+  "include": ["src", "./dist/types/**/*.ts", "./next-env.d.ts"],
+  "exclude": ["functions", "./node_modules"],
   "types": ["vite-plugin-svgr/client"] 
 }
