--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -4,13 +4,13 @@ extends:
   - "eslint:recommended"
   - "plugin:@typescript-eslint/recommended"
   - "plugin:@typescript-eslint/recommended-requiring-type-checking"
+  - "plugin:react-hooks/recommended"
   - "plugin:prettier/recommended"
   - "prettier"
 
 parserOptions:
   ecmaVersion: 2021
   sourceType: "module"
-  tsconfigRootDir: __dirname
   project:
     - "./tsconfig.json"
 
