--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     /* next.js */
     "baseUrl": ".",
     "paths": {
+      "@/assets/*": ["src/assets/*"],
       "@/components/*": ["src/components/*"],
       "@/constants/*": ["src/constants/*"],
       "@/hooks/*": ["src/hooks/*"],
@@ -35,7 +36,7 @@
     "allowJs": true,
     "jsx": "preserve",
     "forceConsistentCasingInFileNames": true,
-    "incremental": true
+    "incremental": true,
   },
   "include": ["src", "./dist/types/**/*.ts", "./next-env.d.ts"],
   "exclude": ["functions", "./node_modules"],
