lots of things happened

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -6,6 +6,7 @@ extends:
   - "plugin:@typescript-eslint/recommended-requiring-type-checking"
   - "plugin:react-hooks/recommended"
   - "plugin:prettier/recommended"
+  - "plugin:@next/next/recommended"
   - "prettier"
 
 parserOptions:
