--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
     /* next.js */
     "baseUrl": ".",
     "paths": {
+      "@typestry/ui": ["src"],
       "@typestry/ui/*": ["src/*"],
     },
     "esModuleInterop": true,
