chore: Remove unused dateUtils and jsonDeepCopy modules, remove deps

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "@typestry-ui/react",
+  "name": "typestry-ui",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "main": "./dist/typestry-ui.mjs",
   "scripts": {
@@ -49,25 +50,14 @@
     "vite-tsconfig-paths": "^4.3.2"
   },
   "dependencies": {
-    "@chakra-ui/react-use-size": "^2.1.0",
     "@svgr/webpack": "^8.1.0",
-    "@tanstack/react-query": "^5.34.2",
-    "axios": "^1.4.0",
     "classnames": "^2.3.2",
-    "date-fns": "^2.30.0",
-    "firebase": "^10.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-error-boundary": "^4.0.13",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.45.4",
-    "react-markdown": "^8.0.7",
-    "react-router": "^6.15.0",
-    "react-router-dom": "^6.15.0",
-    "server-only": "^0.0.1",
     "typescript": "^5.1.6",
-    "vite-plugin-svgr": "^3.2.0",
-    "zod": "^3.23.6"
+    "vite-plugin-svgr": "^3.2.0"
   },
   "eslintConfig": {
     "extends": [
