--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "typestry-ui",
+  "name": "@typestry-ui/react",
   "version": "1.0.0",
   "private": true,
   "description": "",
   "main": "./dist/typestry-ui.mjs",
+  "files": [
+    "dist"
+  ],
+  "types": "./dist/index.d.ts",
   "scripts": {
     "dev": "vite",
     "build": "tsc --p ./tsconfig.json && vite build",
