--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.45.4",
     "typescript": "^5.1.6",
+    "vite-plugin-lib-inject-css": "^2.1.1",
     "vite-plugin-svgr": "^3.2.0"
   },
   "eslintConfig": {
