--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dist"
   ],
   "types": "./dist/index.d.ts",
+  "sideEffects": [
+    "**/*.css"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "tsc --p ./tsconfig.json && vite build",
@@ -16,6 +19,10 @@
   },
   "author": "",
   "license": "ISC",
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.3.2",
     "@storybook/addon-interactions": "^7.3.2",
@@ -24,45 +31,43 @@
     "@storybook/addon-styling": "^1.3.6",
     "@storybook/blocks": "^7.3.2",
     "@storybook/builder-vite": "^7.3.2",
-    "@storybook/react": "^7.3.2",
     "@storybook/react-vite": "^7.3.2",
+    "@storybook/react": "^7.3.2",
     "@storybook/testing-library": "^0.2.0",
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20.5.0",
-    "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "@types/react-helmet": "^6.1.6",
+    "@types/react": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
     "@vitejs/plugin-react": "^4.0.4",
     "autoprefixer": "^10.4.15",
-    "cssnano": "^6.0.1",
     "cssnano-preset-advanced": "^6.0.1",
-    "eslint": "^8.46.0",
+    "cssnano": "^6.0.1",
     "eslint-config-prettier": "^8.9.0",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-storybook": "^0.6.13",
+    "eslint": "^8.46.0",
     "postcss": "^8.4.28",
     "prettier": "^3.0.0",
     "sass": "^1.69.5",
-    "storybook": "^7.3.2",
     "storybook-addon-react-router-v6": "^2.0.5",
+    "storybook": "^7.3.2",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.9",
     "vite-plugin-dts": "^3.9.1",
-    "vite-tsconfig-paths": "^4.3.2"
+    "vite-plugin-lib-inject-css": "^2.1.1",
+    "vite-plugin-svgr": "^3.2.0",
+    "vite-tsconfig-paths": "^4.3.2",
+    "vite": "^4.4.9"
   },
   "dependencies": {
-    "@svgr/webpack": "^8.1.0",
     "classnames": "^2.3.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.45.4",
-    "typescript": "^5.1.6",
-    "vite-plugin-lib-inject-css": "^2.1.1",
-    "vite-plugin-svgr": "^3.2.0"
+    "typescript": "^5.1.6"
   },
   "eslintConfig": {
     "extends": [
