--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "",
-  "main": "./dist/react.mjs",
+  "main": "./dist/index.js",
   "files": [
     "dist"
   ],
