--- a/package.json
+++ b/package.json
@@ -24,16 +24,14 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.3.2",
-    "@storybook/addon-interactions": "^7.3.2",
-    "@storybook/addon-links": "^7.3.2",
-    "@storybook/addon-onboarding": "^1.0.8",
-    "@storybook/addon-styling": "^1.3.6",
-    "@storybook/blocks": "^7.3.2",
-    "@storybook/builder-vite": "^7.3.2",
-    "@storybook/react": "^7.3.2",
-    "@storybook/react-vite": "^7.3.2",
-    "@storybook/testing-library": "^0.2.0",
+    "@storybook/addon-essentials": "^8.1.11",
+    "@storybook/addon-interactions": "^8.1.11",
+    "@storybook/addon-links": "^8.1.11",
+    "@storybook/addon-onboarding": "^8.1.11",
+    "@storybook/blocks": "^8.1.11",
+    "@storybook/builder-vite": "^8.1.11",
+    "@storybook/react": "^8.1.11",
+    "@storybook/react-vite": "^8.1.11",
     "@svgr/webpack": "^8.1.0",
     "@types/node": "^20.5.0",
     "@types/react": "^18.2.18",
@@ -50,12 +48,12 @@
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-storybook": "^0.6.13",
+    "eslint-plugin-storybook": "^0.8.0",
     "postcss": "^8.4.28",
+    "postcss-nesting": "^12.1.5",
     "prettier": "^3.0.0",
     "sass": "^1.69.5",
-    "storybook": "^7.3.2",
-    "storybook-addon-react-router-v6": "^2.0.5",
+    "storybook": "^8.1.11",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.9",
     "vite-plugin-dts": "^3.9.1",
@@ -64,10 +62,10 @@
     "vite-tsconfig-paths": "^4.3.2"
   },
   "dependencies": {
+    "@storybook/addon-themes": "^8.1.11",
     "classnames": "^2.3.2",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.45.4",
-    "storybook-tailwind-dark-mode": "^1.0.22",
     "typescript": "^5.1.6"
   },
   "eslintConfig": {
