--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,7 @@
     "incremental": true
   },
   "include": [
-    "src", "index.d.ts"
+    "src/**/*", "index.d.ts"
   ],
   "exclude": [
     "./node_modules"
