added support for direct path

--- a/package.json
+++ b/package.json
@@ -7,6 +7,14 @@
   "files": [
     "dist"
   ],
+  "exports": {
+    ".": {
+      "import": "./dist/index.es.js",
+      "require": "./dist/index.umd.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./dist/style.css": "./dist/style.css"
+  },
   "types": "./dist/index.d.ts",
   "sideEffects": [
     "**/*.css"
