--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,10 @@
     /* next.js */
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"],
+      "*": ["src/*"],
+      "@/*": ["src/components/*"],
+      "@/hooks/*": ["src/hooks/*"],
+      "@/utils/*": ["src/utils/*"],
     },
     "esModuleInterop": true,
     "allowJs": true,
@@ -32,7 +35,7 @@
     "incremental": true
   },
   "include": [
-    "src/**/*", "index.d.ts"
+    "**/*", "index.d.ts"
   ],
   "exclude": [
     "./node_modules"
