--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,10 +23,7 @@
     /* next.js */
     "baseUrl": ".",
     "paths": {
-      "*": ["src/*"],
-      "@/*": ["src/components/*"],
-      "@/hooks/*": ["src/hooks/*"],
-      "@/utils/*": ["src/utils/*"],
+      "@/*": ["src/*"],
     },
     "esModuleInterop": true,
     "allowJs": true,
