playing around with label

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "description": "",
   "main": "./dist/index.umd.js",
+  "type": "module",
   "files": [
     "dist"
   ],
@@ -23,7 +24,8 @@
     "dev": "vite",
     "build": "tsc --p ./tsconfig.json && vite build",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "types:check": "npx tsx ./scripts/typesCheck.ts"
   },
   "author": "",
   "license": "ISC",
@@ -33,22 +35,24 @@
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^8.1.11",
-    "@storybook/addon-themes": "^8.1.11",
     "@storybook/addon-interactions": "^8.1.11",
     "@storybook/addon-links": "^8.1.11",
     "@storybook/addon-onboarding": "^8.1.11",
+    "@storybook/addon-themes": "^8.1.11",
     "@storybook/blocks": "^8.1.11",
     "@storybook/builder-vite": "^8.1.11",
     "@storybook/react": "^8.1.11",
     "@storybook/react-vite": "^8.1.11",
     "@svgr/webpack": "^8.1.0",
-    "@types/node": "^20.5.0",
+    "@types/log-update": "^3.1.0",
+    "@types/node": "^20.14.10",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "@types/react-helmet": "^6.1.6",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
     "@vitejs/plugin-react": "^4.0.4",
     "autoprefixer": "^10.4.15",
+    "cli-spinners": "^3.1.0",
     "cssnano": "^6.0.1",
     "cssnano-preset-advanced": "^6.0.1",
     "eslint": "^8.46.0",
@@ -58,13 +62,17 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-storybook": "^0.8.0",
+    "log-update": "^6.0.0",
     "postcss": "^8.4.28",
     "postcss-nesting": "^12.1.5",
     "prettier": "^3.0.0",
+    "rollup-plugin-copy": "^3.5.0",
     "sass": "^1.69.5",
     "storybook": "^8.1.11",
     "tailwindcss": "^3.3.3",
+    "tsx": "^4.16.2",
     "vite": "^4.4.9",
+    "vite-plugin-copy": "^0.1.6",
     "vite-plugin-dts": "^3.9.1",
     "vite-plugin-lib-inject-css": "^2.1.1",
     "vite-plugin-svgr": "^3.2.0",
