--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "lib": [
       "ES2020",
       "DOM",
-      "DOM.Iterable"
+      "DOM.Iterable",
     ],
     "module": "ESNext",
     "typeRoots": ["./dist/index.d.ts"],
@@ -30,7 +30,7 @@
     "allowJs": true,
     "jsx": "preserve",
     "forceConsistentCasingInFileNames": true,
-    "incremental": true
+    "incremental": true,
   },
   "include": [
     "**/*", "index.d.ts"
